entity viewer add / edit fixed area, ttype actions fields aligning

--- a/src/portal/content/less/app/special-rules.less
+++ b/src/portal/content/less/app/special-rules.less
@@ -8,17 +8,3 @@
   }
 }
 
-.transaction-type-actions-tab-view, .template-ttype-actions {
-  .ref {
-    background-color: rgb(255, 64, 129) !important;
-    color: #fff !important;
-  }
-  .md-icon-button.md-raised {
-    background: rgb(63, 81, 181);
-    color: #fff;
-    &:hover {
-      background: rgba(63, 81, 181, .8);
-    }
-  }
-}
-
